--- a/openfile/htmls/bootTest.html
+++ b/openfile/htmls/bootTest.html
@@ -3,23 +3,282 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <link rel="stylesheet" href="../css/bootstrap.css"/>
     <script src="../js/jquery.min.js"></script>
-    <script src="../js/popper.min.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
     <title></title>
+    <style>
+        body, html {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+        }
+
+        .wrapper {
+            width: 1390px;
+            margin: auto;
+            position: relative;
+        }
+
+        .mask-container {
+            width: 100%;
+            height: 100%;
+            animation: blackToPurple 2s forwards;
+            position: relative;
+        }
+
+        .mask-line {
+            height: 1px;
+            background: #fff;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            /*transition:width 2s,height 2s;*/
+            animation: lineToWidth 2s, lineToHeight 2s, blackToLightblue 2s;
+            animation-delay: 0s, 2s, 2s;
+            animation-fill-mode: forwards;
+        }
+
+        @keyframes lineToWidth {
+            0% {
+                width: 0;
+
+            }
+
+            100% {
+                width: 100%;
+
+            }
+        }
+
+        /*@keyframes blackToLightblue {
+            from {
+                background-color: black;
+            }
+
+            to {
+                background-color: rgba(173, 216, 230, 0.66);
+            }
+        }*/
+
+        @keyframes blackToPurple {
+            from {
+                background-color: #000;
+            }
+
+            to {
+                /*background-color: transparent;*/
+                background-color: #761885;
+            }
+        }
+
+        @keyframes lineToHeight {
+            0% {
+                height: 1px;
+            }
+
+            100% {
+                height: 100%;
+            }
+        }
+
+        .text {
+            float: left;
+            height: 100%;
+            text-align: center;
+            transform: translateY(300px);
+            overflow: hidden;
+        }
+
+        .img {
+            width: 0;
+            float: left;
+            height: 757px;
+            animation: imgWidth 2s forwards 10s;
+            transform: translateY(100px);
+            margin: 0 100px;
+        }
+
+        @keyframes imgWidth {
+            from {
+                width: 0;
+            }
+            to {
+                width: 397px;
+            }
+        }
+
+        .text1 {
+            font-size: 36px;
+            color: #fff;
+            height: 50px;
+            line-height: 50px;
+        }
+
+        .text1 div {
+            width: 50px;
+            height: 50px;
+            display: inline-block;
+            box-sizing: border-box;
+            overflow: hidden;
+        }
+
+        .text1 div span {
+            width: 50px;
+            height: 50px;
+            display: inline-block;
+            transform: translateX(-50px);
+            animation: text1Show 2s forwards 4s;
+            text-align: center;
+        }
+
+        @keyframes text1Show {
+            from {
+                transform: translateX(-50px);
+            }
+
+            to {
+                transform: translateX(0);
+            }
+        }
+
+        .text2 .text-1 {
+            width: 133px;
+            height: 193px;
+            background: url("../images/txt2-1_7144121.png");
+        }
+
+        .text2 .text-2 {
+            width: 123px;
+            height: 193px;
+            background: url("../images/txt2-2_1870755.png");
+        }
+
+        .text2 .text-3 {
+            width: 45px;
+            height: 193px;
+            background: url("../images/txt2-3_48f4345.png");
+        }
+
+        .text2 .text-4 {
+            width: 129px;
+            height: 193px;
+            background: url("../images/txt2-4_4475258.png");
+        }
+
+        .text2 .text-5 {
+            width: 147px;
+            height: 193px;
+            background: url("../images/txt2-5_d55c4f7.png");
+        }
+
+        .text2 span, .text2 div {
+            display: inline-block;
+            overflow: hidden;
+        }
+
+        .text2 span {
+            animation: text2show 2s forwards 6s;
+            transform: translateX(-147px);
+        }
+
+        @keyframes text2show {
+            from {
+                transform: translateX(-147px);
+            }
+            to {
+                transform: translateX(0);
+            }
+        }
+
+        .btn {
+            display: inline-block;
+            transform: translateY(60px);
+            animation: btnShow 2s forwards 8s;
+        }
+
+        @keyframes btnShow {
+            from {
+                transform: translateY(60px);
+            }
+
+            to {
+                transform: translateY(0);
+            }
+
+        }
+
+        .btn a {
+            width: 170px;
+            height: 50px;
+            line-height: 50px;
+            text-align: center;
+            display: inline-block;
+            border: 2px #fff solid;
+            float: left;
+            color: #fff;
+            text-decoration: none;
+            margin-top: 100px;
+        }
+
+        .clearfix:after {
+            display: block;
+            clear: both;
+            content: '';
+
+        }
+
+        .img img {
+            animation: 2s imgShow forwards 12s;
+            opacity: 0;
+        }
+
+        @keyframes imgShow {
+            from {
+                transform:scale(1);
+                opacity: 0;
+            }
+
+            to {
+                transform: scale(.8);
+                opacity: 1;
+            }
+        }
+    </style>
 </head>
 <body>
-<div class="container">
-    <div id="question-list" class="row justify-content-around mt-5 flex-sm-nowrap flex-wrap">
-        <dl class="card border-0">
-            <dt class="card-header" data-toggle="collapse" data-target=".collapse">carhead</dt>
-                <dd class="card-body collapse d-sm-none show">carbody</dd>
-                <dd class="card-body collapse">carbody</dd>
-                <dd class="card-body collapse">carbody</dd>
-                <dd class="card-body collapse">carbody</dd>
-                <dd class="card-body collapse">carbody</dd>
-        </dl>
+<div class="mask-container">
+    <div class="mask-line">
+        <div class="wrapper">
+            <div class="img">
+                <img src="../images/kv-phone_1083aa4.png" alt="">
+            </div>
+            <div class="text">
+                <div class="text1">
+                    <div><span>魅</span></div>
+                    <div><span>族</span></div>
+                    <div><span>16</span></div>
+                    <div><span>旗</span></div>
+                    <div><span>舰</span></div>
+                    <div><span>手</span></div>
+                    <div><span>机</span></div>
+                </div>
+                <div class="text2">
+                    <div class="wrap"><span class="text-1"></span></div>
+                    <div class="wrap"><span class="text-2"></span></div>
+                    <div class="wrap"><span class="text-3"></span></div>
+                    <div class="wrap"><span class="text-4"></span></div>
+                    <div class="wrap"><span class="text-5"></span></div>
+                </div>
+                <div class="btn clearfix">
+                    <a href="#">
+                        立即购买
+                    </a>
+                    <a href="#">
+                        了解详情
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 </body>
