--- a/openfile/htmls/meizu_index.html
+++ b/openfile/htmls/meizu_index.html
@@ -273,6 +273,43 @@
             </div>
         </div>
         <div class="index-section">
+
+            <div class="mask-container">
+                <div class="mask-line">
+                    <div class="wrapper">
+                        <div class="img">
+                            <img src="../images/kv-phone_1083aa4.png" alt="">
+                        </div>
+                        <div class="text">
+                            <div class="text1">
+                                <div><span>魅</span></div>
+                                <div><span>族</span></div>
+                                <div><span>16</span></div>
+                                <div><span>旗</span></div>
+                                <div><span>舰</span></div>
+                                <div><span>手</span></div>
+                                <div><span>机</span></div>
+                            </div>
+                            <div class="text2">
+                                <div class="wrap"><span class="text-1"></span></div>
+                                <div class="wrap"><span class="text-2"></span></div>
+                                <div class="wrap"><span class="text-3"></span></div>
+                                <div class="wrap"><span class="text-4"></span></div>
+                                <div class="wrap"><span class="text-5"></span></div>
+                            </div>
+                            <div class="btn clearfix">
+                                <a href="#">
+                                    立即购买
+                                </a>
+                                <a href="#">
+                                    了解详情
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="container">
             </div>
         </div>
