--- a/openfile/htmls/server.html
+++ b/openfile/htmls/server.html
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="d-none d-sm-flex text-center line-height-5 align-items-center">
             <div class="col-sm-2">
-                <img class="w-75" src="../images/onload.png" alt=""/>
+                <a href="../htmls/meizu_index.html"><img class="w-75" src="../images/onload.png" alt=""/></a>
             </div>
             <div class="col-sm-10 d-flex justify-content-end">
                 <nav class="meizu-header-link nav mr-5">
